--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@ h1 {
   font-style: italic;
   color: #373fff;
 }
+
+.left-side a{
+  text-decoration : none;
+  color : grey;
+}
+.left-side a:hover{
+  text-decoration : underline;
+  color: blue;
+}
