--- a/style.css
+++ b/style.css
@@ -9,11 +9,14 @@ h1 {
   font-style: italic;
   color: #373fff;
 }
-button {
-  
-}
+
 .nav-link-border {
-  word-spacing : 3mm;
+  height: 22px;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.5s;
+    font-size: 20px;
+    font-weight: 400;
+    text-decoration: none;
 }
 .left-side {
   display:flex;
@@ -26,6 +29,9 @@ button {
 .left-side a:hover{
   text-decoration : underline;
   color: blue;
+}
+.current-link {
+  color : purple ;
 }
 .nav-border {
   position: absolute;
