🎠🏄 Checkpoint ./style.css:18049447/707:18325740/55 ./index.html:18049447/3144:18325740/48

--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ h1 {
   font-style: italic;
   color: #373fff;
 }
-input {
+.checkoutCart input {
   width:5%;
-  
+  position: absolute;
 }
 
 .nav-link-border {
@@ -23,6 +23,10 @@ input {
     text-decoration: none;
   word-spacing : 3mm;
   padding : 5px;
+}
+.pimg1 {
+  min-height : 100%;
+  background-image: url("https://www.nbcsports.com/washington/sites/csnma/files/2019/04/26/mannymachadousat.png");
 }
 .left-side {
   display:flex;
