--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 /* CSS files add styling rules to your content */
 
-body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 2em;
-}
-
+body, html{
+    height:100%;
+    margin:0;
+    font-size:16px;
+    font-family:"Lato", sans-serif;
+    font-weight:400;
+    line-height:1.8em;
+    color:#FFC72C ;
+  }
 h1 {
   font-style: italic;
   color: #373fff;
@@ -50,7 +54,7 @@ button {
   } 
 .pimg1 {
   min-height : 100%;
-  background-image: url("https://www.nbcsports.com/washington/sites/csnma/files/2019/04/26/mannymachadousat.png");
+  background-image: url("https://cdn.britannica.com/10/152310-050-5A09D74A/Sand-dunes-Sahara-Morocco-Merzouga.jpg") ;
 }
 .left-side {
   display:flex;
@@ -81,3 +85,11 @@ padding: 10px 0;
   text-transform: uppercase;
   font-size: 0.9rem;
 } */
+/* .pimg2 {
+  background-image: url("https://ca-times.brightspotcdn.com/dims4/default/ee45bed/2147483647/strip/true/crop/3563x2375+0+0/resize/1486x991!/quality/90/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F24%2F98%2F67b7fc894dfa8c7d913fb49fae51%2Fapphoto-mets-padres-baseball2.JPG");
+} */
+@media(max-width:568px){
+    .pimg1 .pimg2 .pimg3{
+      background-attachment:scroll;
+    }
+  }
