✨🚞 Checkpoint ./aboutUs.html:18049447/152 ./script.js:18049447/51 ./index.html:18049447/59 ./cart.html:18049447/546:18075093/34 ./style.css:18049447/8

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ padding: 10px 0;
 }
 .sectionBorder1 {
   color:white;
-  background-color: teal;
+  background-color: grey;
   height:3cm;
 }
 .nav-border {
