🚤💑 Checkpoint ./style.css:18049447/109 ./index.html:18049447/325

--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ padding: 10px 0;
   color:white;
   background-color: grey;
   height:3cm;
+  text-align:center;
+}
+.headText{
+  text-size: 30px;
 }
 .nav-border {
   position: absolute;
