🎠💶 Checkpoint ./index.html:18049447/39 ./style.css:18049447/93 ./popular.html:18075093/39

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ h1 {
   display: block;
   
 } 
+.logo {
+  position:fixed;top: 10px;left:10px
+}
 /* button {
     display: inline-block;
     height: 134px;
