💳🎷 Checkpoint ./popular.html:18075093/1189 ./.glitch-assets:18049447/401 ./index.html:18049447/194 ./style.css:18049447/261

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h1 {
   } 
 .pimg1 {
   min-height : 100%;
-  background-image: url("https://cdn.theatlantic.com/thumbor/kD0aIO2oVWaqbhLNugjLRl6WLDw=/720x405/media/img/mt/2019/07/Characters3_2/original.jpg") ;
+  background-image: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/imaginary-friend-index-1565377994.png?crop=0.502xw:1.00xh;0.228xw,0&resize=480:*") ;
 }
 .pimg2 {
   min-height : 125%;
