👜🌺 Checkpoint ./style.css:18049447/197 ./.glitch-assets:18049447/526 ./index.html:18049447/494

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h1 {
 }
     .pimg2 {
   min-height : 125%;
-  background-image: url("https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FFree_Sample_By_Wix?v=1595891583169");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSbeaK5DLRmaIAI9-eBidcoAubvuHIBFICsFw&usqp=CAU");
 }
 .left-side {
   display:flex;
