--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h1 {
   display: block;
   
 } 
+
 .logo {
   position:fixed;top: 10px;left:10px
 }
@@ -63,7 +64,7 @@ h1 {
 }
     .pimg2 {
   min-height : 125%;
-  background-image: url("https://www.nationwidechildrens.org/-/media/nch/700childrens/2015/11/blog-imaginary-friends.ashx?w=706&h=470&as=1&bc=ffffff&hash=EB27E98C8BE4AB7DCAA30B98506BF313");
+  background-image: url("https://i.insider.com/564cc42e2491f99d008b63b7?width=1136&format=jpeg");
 }
 .left-side {
   display:flex;
