--- a/new.css
+++ b/new.css
@@ -3,9 +3,15 @@
 h1 {
   text-align: center;
   font-style: italic;
-  padding-top: 20%;
-/*   want to add box around new items  */
+  padding-top: 5%;
+  
 }
+#checkoutCart img {
+  height: 30px;
+  width: 30px;
+  display: block;
+} 
+
 
 .nav-link-border {
   height: 22px;
