--- a/new.css
+++ b/new.css
@@ -1,10 +1,17 @@
 /* CSS files add styling rules to your content */
+body, html{
+    height:100%;
+    margin:0;
+    font-size:16px;
+    font-family:"Lato", sans-serif;
+    font-weight:400;
+    line-height:1.8em;
+  }
 
 h1 {
   text-align: center;
-  font-style: italic;
+  font-family: italic;
   padding-top: 5%;
-  
 }
 #checkoutCart img {
   height: 30px;
