🍋🔔 Checkpoint ./new.html:18325740/333 ./AboutUs.css:18075093/2114 ./Cart.css:18049447/441 ./aboutUs.html:18075093/959 ./new.css:18325740/305 ./cart.html:18049447/2861 ./.glitch-assets:18325740/371

--- a/new.css
+++ b/new.css
@@ -105,3 +105,13 @@ src: url("E-BrantScript.ttf");
       background-attachment:scroll;
     }
   }
+
+#item1 {
+  position: absolute;
+  left: 100px;
+  top: 35%;
+  font-family: italic;
+}
+.item1pic{
+  background-image: url(https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Ftimmy.png?v=1595965980993);
+}
