🌚🚀 Checkpoint ./aboutUs.html:18075093/35 ./new.css:18325740/397 ./new.html:18325740/71 ./popular.html:18075093/301

--- a/new.css
+++ b/new.css
@@ -112,9 +112,8 @@ src: url("E-BrantScript.ttf");
   top: 35%;
   font-family: italic;
 }
-img{
-  top: 20%;
+
+.item1pic img{
   height: 150px;
   width: 150px;
-/*   display: block; */
 }
