🛀👧 Checkpoint ./popular.html:18075093/486 ./new.html:18325740/13 ./new.css:18325740/142

--- a/new.css
+++ b/new.css
@@ -112,6 +112,9 @@ src: url("E-BrantScript.ttf");
   top: 35%;
   font-family: italic;
 }
+.item1pic #item1, img{
+  border: 5px solid black;
+}
 
 .item1pic img{
   height: 150px;
