🌷🚋 Checkpoint ./new.css:18325740/343 ./new.html:18325740/341 ./Cart.css:18049447/29 ./.glitch-assets:18325740/379 ./aboutUs.html:18075093/174 ./index.html:18049447/5 ./script.js:18049447/18

--- a/Cart.css
+++ b/Cart.css
@@ -28,7 +28,7 @@ h1 {
   
 }
 #cartDiv{
-  position:absolute;top: 15%; left: 3.9%;
+  position:absolute;top: 90px; left: 52px;
   font-size: 24px;
   font-weight:700;
   font-family: Ariel,sans-serif;
