--- a/new.css
+++ b/new.css
@@ -112,11 +112,19 @@ src: url("E-BrantScript.ttf");
   top: 35%;
   font-family: italic;
 }
-.item1pic #item1, img{
-  border: 5px solid black;
-}
 
 .item1pic img{
+  height: 150px;
+  width: 150px;
+}
+#item2 {
+  position: absolute;
+  left: 500px;
+  top: 35%;
+  font-family: italic;
+}
+
+.item2pic img {
   height: 150px;
   width: 150px;
 }
