--- a/AboutUs.css
+++ b/AboutUs.css
@@ -1,91 +1,115 @@
 /* CSS files add styling rules to your content */
-body, html{
-    height:100%;
-    margin:0;
-    font-size:16px;
-    font-family:"Lato", sans-serif;
-    font-weight:400;
-    line-height:1.8em;
-  }
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.8em;
+}
 
 h1 {
   text-align: center;
   font-family: italic;
   padding-top: 5%;
 }
+
+h2 {
+  text-align: center;
+  font-family: italic;
+  padding-top: 5%;
+  color: white;
+}
+
+p {
+  text-align: center;
+  font-family: italic;
+  padding-top: 5%;
+  color: white;
+}
+
+h3 {
+  text-align: center;
+  font-family: italic;
+  padding-top: 5%;
+  color: white;
+}
+
 #checkoutCart img {
   height: 30px;
   width: 30px;
   display: block;
-} 
-
+}
 
 .nav-link-border {
   height: 22px;
-    border-bottom: 1px solid transparent;
-    transition: border-bottom 0.5s;
-    font-size: 20px;
-    font-weight: 400;
-    text-decoration: none;
-  word-spacing : 3mm;
-  padding : 5px;
+  border-bottom: 1px solid transparent;
+  transition: border-bottom 0.5s;
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: none;
+  word-spacing: 3mm;
+  padding: 5px;
 }
-.pimg1, .pimg2{
-    
-    /*opacity:0.70;*/
-    position: relative;
-    background-position:center center;
-    background-size: cover;
-    background-repeat:no-repeat;
+.pimg1,
+.pimg2 {
+  /*opacity:0.70;*/
+  position: relative;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-color: black;
-    /*
+  /*
       fixed = parallax
       scroll = normal
     */
-    background-attachment:fixed;
-  } 
+  background-attachment: fixed;
+}
 .pimg1 {
-  min-height : 100%;
+  min-height: 100%;
   background-image: url("https://images.theconversation.com/files/249708/original/file-20181210-76977-143h6ep.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip");
 }
-    .pimg2 {
-  min-height : 125%;
+.pimg2 {
+  min-height: 125%;
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSbeaK5DLRmaIAI9-eBidcoAubvuHIBFICsFw&usqp=CAU");
 }
 .left-side {
-  display:flex;
+  display: flex;
   padding: 5px 5px;
-/*   margin: 20px 0 0 ;
+  /*   margin: 20px 0 0 ;
 padding: 10px 0;
  */
 }
-.left-side a{
-  text-decoration : none;
-  color : #567d46;
-/*   color : #e1b382; */
+.left-side a {
+  text-decoration: none;
+  color: #567d46;
+  /*   color : #e1b382; */
 }
 #frontText {
-  position:absolute;top: 50%; left: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   font-size: 50px;
-  font-weight:400;
+  font-weight: 400;
   font-family: "CustomFont";
-src: url("E-BrantScript.ttf");
+  src: url("E-BrantScript.ttf");
 }
-.left-side a:hover{
-  text-decoration : underline;
+.left-side a:hover {
+  text-decoration: underline;
   color: #feb950;
 }
-.current-link a{
+.current-link a {
   color: #704700;
-/*   color : #c89666; */
+  /*   color : #c89666; */
 }
 .sectionBorder1 {
-  color:white;
+  color: white;
   background-color: grey;
-  height:3cm;
-  text-align:center;
+  height: 3cm;
+  text-align: center;
 }
-.headText{
+.headText {
   text-size: 30px;
 }
 .nav-border {
@@ -100,8 +124,8 @@ src: url("E-BrantScript.ttf");
   font-size: 0.9rem;
 } */
 
-@media(max-width:568px){
-    .pimg1 .pimg2 .pimg3{
-      background-attachment:scroll;
-    }
+@media (max-width: 568px) {
+  .pimg1 .pimg2 .pimg3 {
+    background-attachment: scroll;
   }
+}
