--- a/AboutUs.css
+++ b/AboutUs.css
@@ -10,12 +10,20 @@ html {
 }
 
 h1 {
+  font-size: 36px;
+  text-align: center;
+  font-family: italic;
+  padding-top: 5%;
+}
+
+p1{
   text-align: center;
   font-family: italic;
   padding-top: 5%;
 }
 
 h2 {
+  font-size; 36px;
   text-align: center;
   font-family: italic;
   padding-top: 5%;
@@ -30,6 +38,7 @@ p {
 }
 
 h3 {
+  font-size: 36px;
   text-align: center;
   font-family: italic;
   padding-top: 5%;
