👛🙍 Checkpoint ./.glitch-assets:18049447/668 ./popular.html:18049447/603 ./popular.css:18049447/149

--- a/popular.css
+++ b/popular.css
@@ -118,3 +118,15 @@ src: url("E-BrantScript.ttf");
   width: 150px;
  
 }
+.p4 {
+  position: absolute;
+  left: 958px;
+  top: 350px;
+  font-family: italic;
+}
+
+.pimg4 img {
+  height: 170px;
+  width: 130px;
+ 
+}
