🚪💫 Checkpoint ./popular.html:18049447/1 ./aboutUs.html:18075093/62 ./AboutUs.css:18075093/52 ./style.css:18049447/164

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h1 {
 }
     .pimg2 {
   min-height : 125%;
-  background-image: url("https://nationalpostcom.files.wordpress.com/2013/11/calvin-hobbes.jpg?quality=100&strip=all&w=642");
+  background-image: url("https://cache.desktopnexus.com/thumbseg/410/410574-bigthumbnail.jpg");
 }
 .left-side {
   display:flex;
