--- a/AboutUs.css
+++ b/AboutUs.css
@@ -18,12 +18,13 @@ h1 {
 
 p1{
   text-align: center;
+  font-size: 20px;
   font-family: italic;
   padding-top: 5%;
 }
 
 h2 {
-  font-size; 36px;
+  font-size: 36px;
   text-align: center;
   font-family: italic;
   padding-top: 5%;
@@ -31,6 +32,7 @@ h2 {
 }
 
 p {
+  font-size: 20px;
   text-align: center;
   font-family: italic;
   padding-top: 5%;
