✈️🛣 Checkpoint ./AboutUs.css:18075093/40 ./new.html:18325740/689 ./popular.html:18049447/52 ./.glitch-assets:18325740/1204 ./aboutUs.html:18049447/143:18075093/100

--- a/AboutUs.css
+++ b/AboutUs.css
@@ -109,7 +109,7 @@ padding: 10px 0;
 }
 .left-side a:hover {
   text-decoration: underline;
-  color: orange;
+  color: purple;
 }
 .current-link a {
   color: limegreen;
