🏙🎮 Checkpoint ./popular.html:18049447/29 ./AboutUs.css:18075093/536 ./aboutUs.html:18075093/43 ./new.css:18325740/723 ./popular.css:18049447/46:18325740/6 ./new.html:18325740/57

--- a/new.css
+++ b/new.css
@@ -85,26 +85,48 @@ src: url("E-BrantScript.ttf");
     }
   }
 
-#item1 {
+.p1 {
   position: absolute;
   font-family: italic;
 }
-
-.item1pic img{
-  height: 150px;
-  width: 150px;
+.pimg1 img{
+  
 }
-#item2 {
-  position: absolute;
-  font-family: italic;
-}
-
-.item2pic img {
-  height: 150px;
-  width: 150px;
-}
-#item2 {
+.p2 {
   position:absolute;
-  font-family: italic;
 }
 
+.pimg2 img {
+  
+}
+
+.p3 {
+  position: absolute;
+  font-family: italic;
+}
+.pimg3 img{
+  
+}
+.p4 {
+  position:absolute;
+}
+
+.pimg4 img {
+  
+}
+
+.p5 {
+  position: absolute;
+  font-family: italic;
+}
+.pimg5 img{
+  
+}
+.p6 {
+  position:absolute;
+}
+
+.pimg6 img {
+  height: 100px;
+  width: 100px;
+}
