--- a/AboutUs.css
+++ b/AboutUs.css
@@ -3,40 +3,24 @@ body,
 html {
   height: 100%;
   margin: 0;
-  font-size: 16px;
+  font-size: 20px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.8em;
   color: white;
 }
 
-h1 {
+h {
   font-size: 36px;
   text-align: center;
   font-family: italic;
   padding-top: 5%;
-}
-
-h2 {
-  font-size: 36px;
-  text-align: center;
-  font-family: italic;
-  padding-top: 5%;
-  color: white;
 }
 
 p {
   text-align: center;
   font-family: italic;
-  padding-top: 5%;
-  color: white;
-}
-
-h3 {
-  font-size: 36px;
-  text-align: center;
-  font-family: italic;
-  padding-top: 5%;
+  padding-top: .90%;
   color: white;
 }
 
@@ -47,7 +31,7 @@ h3 {
 }
 
 .nav-link-border {
-  height: 22px;
+  height:22px;
   border-bottom: 1px solid transparent;
   transition: border-bottom 0.5s;
   font-size: 20px;
