🌱🌻 Checkpoint ./popular.html:18049447/6 ./popular.css:18049447/49:18075093/130 ./new.html:18049447/10:18325740/16 ./AboutUs.css:18075093/30

--- a/popular.css
+++ b/popular.css
@@ -108,7 +108,7 @@ src: url("E-BrantScript.ttf");
 }
 .p3 {
   position: absolute;
-  left: 680px;
+  left: 780px;
   top: 450px;
   font-family: italic;
 }
@@ -142,5 +142,14 @@ src: url("E-BrantScript.ttf");
   width: 130px;
  
 }
+
+.p6 {
+  position: absolute;
+  right:
+  top:
+  font-family:  
+}
  
-https://finalproject6.glitch.me
+.pimg5 img {
+  height: 170px;
+  width: 130px;
