🙋💇 Checkpoint ./AboutUs.css:18075093/50 ./aboutUs.html:18075093/8 ./popular.html:18049447/10:18075093/521 ./new.html:18325740/298 ./popular.css:18049447/20 ./.glitch-assets:18075093/414

--- a/AboutUs.css
+++ b/AboutUs.css
@@ -15,13 +15,12 @@ h {
   text-align: center;
   font-family: italic;
   padding-top: 5%;
-  padding-
 }
 
 p {
   text-align: center;
   font-family: italic;
-  padding-top: .90%;
+  padding-top: 0%;
   color: white;
 }
 
