--- a/AboutUs.css
+++ b/AboutUs.css
@@ -12,9 +12,9 @@ html {
 
 h {
   font-size: 36px;
-  text-align: center;
+  text-align: left;
   font-family: italic;
-  padding-top: 5%;
+  padding-top: 3%;
 }
 
 p {
