--- a/AboutUs.css
+++ b/AboutUs.css
@@ -2,7 +2,7 @@
 body,
 html {
   height: 100%;
-  margin: 0;
+  margin: auto;
   font-size: 20px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -12,17 +12,18 @@ html {
 
 h {
   font-size: 36px;
-  text-align: left;
+  text-align: center;
   font-family: italic;
-  padding-top: 3%;
+  padding-top: 0%;
 }
-
+<style>
 p {
   text-align: center;
   font-family: italic;
   padding-top: 0%;
   color: white;
 }
+</style>
 
 #checkoutCart img {
   height: 30px;
@@ -77,6 +78,7 @@ padding: 10px 0;
 #frontText {
   position: absolute;
   top: 50%;
+  margin: auto;
   left: 50%;
   font-size: 50px;
   font-weight: 400;
