--- a/AboutUs.css
+++ b/AboutUs.css
@@ -8,6 +8,7 @@ html {
   font-weight: 400;
   line-height: 1.8em;
   color: white;
+  text-align: center;
 }
 
 h {
@@ -16,14 +17,15 @@ h {
   font-family: italic;
   padding-top: 0%;
 }
-<style>
+.text1 {
+  text-align:center;
+}
 p {
   text-align: center;
   font-family: italic;
   padding-top: 0%;
   color: white;
 }
-</style>
 
 #checkoutCart img {
   height: 30px;
@@ -32,7 +34,7 @@ p {
 }
 
 .nav-link-border {
-  height:22px;
+  height: 22px;
   border-bottom: 1px solid transparent;
   transition: border-bottom 0.5s;
   font-size: 20px;
@@ -80,6 +82,7 @@ padding: 10px 0;
   top: 50%;
   margin: auto;
   left: 50%;
+  text-align: center;
   font-size: 50px;
   font-weight: 400;
   font-family: "CustomFont";
