😄🚜 Checkpoint ./AboutUs.css:18075093/573

--- a/AboutUs.css
+++ b/AboutUs.css
@@ -9,7 +9,6 @@ html {
   line-height: 1.8em;
   color: white;
   text-align: center;
-  position: relative;top:10px;left:14px;
 }
 
 h {
@@ -17,11 +16,10 @@ h {
   text-align: center;
   font-family: italic;
   padding-top: 0%;
-  
 }
-.text1 {
+text1 {
   text-align: center;
-  
+  position: fixed;right: 11;
 }
 p {
   text-align: center;
