--- a/AboutUs.css
+++ b/AboutUs.css
@@ -3,7 +3,7 @@ body,
 html {
   height: 100%;
   margin: auto;
-  font-size: 20px;
+  font-size: 25px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.8em;
@@ -12,7 +12,14 @@ html {
 }
 
 h {
-  font-size: 36px;
+  font-size: 40px;
+  text-align: center;
+  font-family: italic;
+  padding-top: 0%;
+}
+
+h1 {
+  font-size: 40px;
   text-align: center;
   font-family: italic;
   padding-top: 0%;
