🎆💽 Checkpoint ./new.html:18049447/161 ./popular.html:18049447/564 ./style.css:18049447/14 ./popular.css:18049447/259 ./new.css:18049447/14

--- a/new.css
+++ b/new.css
@@ -52,7 +52,7 @@ src: url("E-BrantScript.ttf");
 }
 .left-side a:hover{
   text-decoration : underline;
-  color: #feb950;
+  color: #704700;
 }
 .current-link a{
   color: #704700;
