--- a/popular.css
+++ b/popular.css
@@ -51,7 +51,7 @@ src: url("E-BrantScript.ttf");
 }
 .left-side a:hover{
   text-decoration : underline;
-  color: #feb950;
+  color: #704700;
 }
 .current-link a{
   color: #704700;
@@ -145,11 +145,13 @@ src: url("E-BrantScript.ttf");
 
 .p6 {
   position: absolute;
-  right:
-  top:
-  font-family:  
+  left: 81%;
+  top: 450px;
+  font-family: italic;
 }
- 
+
 .pimg6 img {
   height: 170px;
   width: 130px;
+ 
+}
