--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ padding: 10px 0;
 }
 .left-side a:hover{
   text-decoration : underline;
-  color: #feb950;
+  color: #704700;
 }
 .current-link a{
   color: #704700;
