🦀🎟 Checkpoint ./.glitch-assets:18049447/430:18075093/855 ./popular.html:18049447/251 ./new.html:18075093/740:18325740/139 ./popular.css:18049447/16 ./new.css:18075093/82

--- a/new.css
+++ b/new.css
@@ -130,3 +130,12 @@ src: url("E-BrantScript.ttf");
   height: 100px;
   width: 100px;
 }
+
+.p8 {
+  position:absolute;
+}
+
+.pimg8 img {
+  height: 100px;
+  width: 100px;
+}
