--- a/popular.css
+++ b/popular.css
@@ -42,6 +42,9 @@ padding: 10px 0;
   color : #567d46;
 /*   color : #e1b382; */
 }
+hr {
+  width: 500px;
+}
 #frontText {
   position:absolute;top: 50%; left: 50%;
   font-size: 50px;
