--- a/style.css
+++ b/style.css
@@ -98,9 +98,9 @@ color :white;
 /*   color : #c89666; */
 }
 .sectionBorder1 {
-  color:white;
-  background-color: #8B8989;
-  height:3cm;
+  color: white;
+  background-color: #8C1717;
+  height:5cm;
   text-align:center;
 }
 .headText{
