🎯⭐️ Checkpoint ./index.html:18049447/346 ./new.html:18075093/296 ./new.css:18075093/85 ./style.css:18049447/624 ./.glitch-assets:18049447/372

--- a/new.css
+++ b/new.css
@@ -159,6 +159,15 @@ src: url("E-BrantScript.ttf");
   width: 100px;
 }
 
+.p10 {
+  position:absolute;
+}
+
+.pimg10 img {
+  height: 100px;
+  width: 100px;
+}
+
 @media (max-width: 568px) {
   .background {
     background-attachment: scroll;
