--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1 {
   background-image: url("https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fben-white-4K2lIP0zc_k-unsplash.jpg?v=1596139778517");
 }
     .pimg2 {
-  min-height : 125%;
+  min-height : 140%;
   background-image: url("https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fhumphrey-muleba-Cc-CQTUkbH0-unsplash.jpg?v=1596140221293");
 }
 .left-side {
@@ -98,16 +98,35 @@ color :white;
 /*   color : #c89666; */
 }
 .sectionBorder1 {
+ 
   color: white;
   background-color: #8C1717;
   height:5cm;
   text-align:center;
-
+  
+font-size:20px;
   font-family: "CustomFont";
 src: url("https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FMerriweather-Regular.ttf?v=1596141689204");
 }
 .headText{
-
+/* padding-top:3px; */
+  font-size:30px
+  
+}
+.sectionBorder2{
+ 
+  color: white;
+  background-color:#335855;
+  height:5cm;
+  text-align:center;
+  bottom:0;
+  position:absolute;
+font-size:20px;
+  font-family: "CustomFont";
+src: url("https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FMerriweather-Regular.ttf?v=1596141689204");
+}
+.headText2 {
+/* padding-top:3px; */
   font-size:30px
   
 }
