--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ padding: 10px 0;
   font-weight:400;
   font-family: "CustomFont";
 src: url("https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlayfairDisplay-Regular.ttf?v=1596138829727");
-color :white;
+color :#5f9ea0;
   
   
 }
